[package]
name = "ddos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.0", features = ["full"] }
chrono = "0.4"
clap = { version = "4.4.11", features = ["derive"] }
[dependencies.reqwest]
reqwest = "0.11.14"
